[tool.poetry]
name = "fretlabel"
version = "0.2.0-alpha.1"
description = "PyMOL plugin to interactively label nucleic acids with fluorophores in silico"
authors = [
    "Fabio Steffen <fabio.steffen@chem.uzh.ch>", 
    "Roland K.O. Sigel <roland.sigel@chem.uzh.ch>", 
    "Richard Börner <richard.boerner@hs-mittweida.de>"]
maintainers = ["Fabio Steffen <fabio.steffen@chem.uzh.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://rna-fretools.github.io/"
repository = "https://github.com/RNA-FRETools/fretlabel"
documentation = "https://rna-fretools.github.io/fretlabel/"
keywords = ["FRET", "single-molecule", "molecular dynamics", "PDB", "fluorescence labeling", "AMBERDYES"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.4"
pandas = "^1.3.5"
biopandas = "^0.2.9"

[tool.poetry.dev-dependencies]
jupyter-book = "^0.12.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
lmfit = "^1.0.3"
fretraj = "^0.2.6"

[tool.poetry.scripts]
fretlabel = "fretlabel.console:fretlabel"
solvate = "fretlabel.console:solvate"
single_run = "fretlabel.console:single_run"
continue_run = "fretlabel.console:continue_run"
multi_run = "fretlabel.console:multi_run"
resp_fit = "fretlabel.console:resp_fit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
