[project]
name = "fretlabel"
version = "0.2.1"
description = "PyMOL plugin to interactively label nucleic acids with fluorophores in silico"
authors = [
    { name = "Fabio Steffen", email = "fabio.steffen@chem.uzh.ch" }, 
    { name = "Roland K.O. Sigel", email = "roland.sigel@chem.uzh.ch" }, 
    { name = "Richard Börner", email = "richard.boerner@hs-mittweida.de" }
    ]
license = { text ="GPL-3.0-or-later" }
readme = "README.md"
keywords = ["FRET", "single-molecule", "molecular dynamics", "PDB", "fluorescence labeling", "AMBERDYES"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

requires-python = ">=3.10"
dependencies = [
    "pandas",
    "biopandas"
    ]

[project.optional-dependencies]
dev = [
    "bumpver",
    ]
docs = [
    "lmfit",
    "fretraj",
    "jupyter-book",
    "ipywidgets",
    "matplotlib",
    "seaborn"
    ]

[project.urls]
Repository = "https://github.com/RNA-FRETools/fretlabel"
Documentation = "https://rna-fretools.github.io/fretlabel/"
Issues = "https://rna-fretools.github.io/fretlabel/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.bumpver]
current_version = "0.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]

[project.scripts]
fretlabel = "fretlabel.console:fretlabel"
solvate = "fretlabel.console:solvate"
single_run = "fretlabel.console:single_run"
continue_run = "fretlabel.console:continue_run"
multi_run = "fretlabel.console:multi_run"
resp_fit = "fretlabel.console:resp_fit"
